--- a/src/Components/ImageContainer/ImageContainer.css
+++ b/src/Components/ImageContainer/ImageContainer.css
@@ -3,7 +3,7 @@
 	height: 100%;
 
 	display: flex;
-	justify-content: center;
-	align-items: flex-start;
+	flex-direction: column;
+	align-items: center;
 	 
 }
