--- a/src/Components/Image/Image.css
+++ b/src/Components/Image/Image.css
@@ -1,9 +1,13 @@
-.imgMain{
-	max-width: 70%;
+.Img{
+	max-width: 800px;
+	max-height: 600px;
+	background-size: contain;
 	margin-top: 25px;
-	transition: all .4s;
 }
 
-.imgMain:hover{
+.imgMain{
+	height: 100%;
+	width: 100%;
+	transition: all .4s;
 	box-shadow: 0px 0px 17px -3px rgba(0,0,0,0.75);
 }
