--- a/src/Components/ImageContainer/ImageContainer.css
+++ b/src/Components/ImageContainer/ImageContainer.css
@@ -1,8 +1,8 @@
 .imageContainer{
-	width: 75%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	display: grid;
+	grid-template-areas: 1fr;
+	grid-template-rows: 1fr 6fr;
+	justify-items: center;
 	position: relative;
+	padding:0 15px;
 }
