--- a/src/Components/InputWrapper/InputWrapper.css
+++ b/src/Components/InputWrapper/InputWrapper.css
@@ -1,14 +1,15 @@
 .InputWrapper{
 	display: flex;
 	justify-content: center;
-	margin-top: 50px;
-	max-width: 70%;
+	
+	margin-bottom: 15px;
+	height: 35px;
 }
 
 .Input{
 	box-sizing: border-box;
 	height: 35px;
-	width: 600px;
+	
 	background-color: transparent;
 	border-radius: 5px;
 	/* border:1px solid white; */
@@ -17,8 +18,6 @@
 	background-color: #111111;
 	background-color: #15171A;
 	padding: 5px 10px;
-	
-	max-width: 70%;
 }
 
 .Input:focus{
@@ -28,23 +27,23 @@
 .Button {
 	color: #fff;
 	text-decoration:none;
-	width:123px;
-	height:33px;
+	/* width:123px; */
+	height:35px;
 	background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #F2435D 80%, #00C0FF 100%);
 	border:none;
 	border-radius:5px;
 	display:flex;
 	align-items:center;
 	justify-content:center;
-	font-size:3vw;
 	margin-left: 15px;
 	outline:none;
 	transition: all .4s;
  }
 
  .Button:after {
-	content:attr(alt);
-	width:120px;
+	/* content:attr(alt); */
+	/* width:120px; */
+	/* width:10vw; */
 	height:30px;
 	font-size: 14px;
 	background-color:#1C1E22;
