Button border was fixed. Input[range] behavior on responsiveness was fixed. Preloader position was changed co center.

--- a/src/Components/Preloader/Preloader.css
+++ b/src/Components/Preloader/Preloader.css
@@ -2,8 +2,8 @@
 	width: 100px;
 	height: 100px;
 	position: absolute;
-	left:45%;
-	top:45%;
+	left:calc(50% - 50px);
+	top:50%;
 } 
 #loader {
 	display: block;
