Aside min-height was added for the preloader to normal work.

--- a/src/media.css
+++ b/src/media.css
@@ -107,7 +107,7 @@
  @media  screen and (max-width: 600px){
 	.main{
 	  grid-template-columns: 1fr;
-	  grid-template-rows: 1fr 2fr;
+	  grid-template-rows: 1fr 400px;
 	}
 
 	.Img{
