--- a/src/Components/Aside/Aside.css
+++ b/src/Components/Aside/Aside.css
@@ -2,7 +2,7 @@
 	border-right: 1px solid grey;	
 	background-color: #1A1D23;
 	color:#fff;
-
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
