--- a/src/media.css
+++ b/src/media.css
@@ -164,8 +164,12 @@
 	 margin-top: 80px;
  }
 
- .filter{
-	margin-right: 20px;
+ .filter:first-child{
+	margin-left: 20px;
+ }
+ 
+ .filter:nth-child(3){
+	margin-left: 20px;
  }
 
  .filterList .default{
