--- a/src/Components/Aside/Aside.css
+++ b/src/Components/Aside/Aside.css
@@ -1,10 +1,27 @@
 .aside{
-	border-right: 1px solid grey;	
+	border-right: 1px solid rgba(0,0,0,.2);	
 	background-color: #1A1D23;
 	color:#fff;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+   max-height: 93vh;
+      overflow-y: auto;
 	
 }
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,.5); 
+	border-radius: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px #ff1a1a; 
+}
+
