--- a/src/Components/Preset/Preset.css
+++ b/src/Components/Preset/Preset.css
@@ -1,29 +1,29 @@
-.filter{
+.Preset{
 	margin-bottom: 20px;
 	width: 100%;
 }
 
-.filter img{
+.Preset img{
 	max-width:100%;
 	transition:all .3s;
 }
 
-.filter h4{
+.Preset h4{
 	margin-top: 10px;
 	transition:all .3s;
 	text-align: center;
 }
 
-.filter:hover > img{
+.Preset:hover > img{
 	box-shadow: 0px 0px 20px -3px rgba(0,0,0,0.75);
 	cursor: pointer;
 }
 
-.filter:hover > h4{
+.Preset:hover > h4{
 	color:rgba(255, 67, 95, 0.93);
 	cursor: pointer;
 }
 
-.filter:hover{
+.Preset:hover{
 	cursor: pointer;
 }
